--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "framer-motion": "^10.16.15"
+    "framer-motion": "^10.16.15",
+    "newsapi": "^2.4.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
